# MedicalMultitaskModeling

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  docker-compose.yml  license.md  license.txt  pyproject.toml  read_version.py  third-party-licenses.txt
.gitlab/merge_request_templates/: merge_request_qa_level_1.md
api/: Dockerfile  api.py
copier_template/: copier.yml
copier_template/{{project_name}}/: inference.ipynb  quickstart.ipynb
copier_template/{{project_name}}/.devcontainer/: devcontainer.json.jinja
docker/mmm-base/: Dockerfile
docker/mmm-stack/: Dockerfile
docs/source/: conf.py  contribution.rst  fme.rst  index.rst
mmm/: DataSplit.py  __init__.py  api.py  app.py  augmentations.py  bucketizing.py  event_selectors.py  inference_api.py  inference_app.py  mtl_types.py  nic_utility.py  nomad_ext.py  pos_encoding.py  settings.py  sklearn_segmentation.py  task_sampling.py  torch_ext.py  traditional_ml.py  transforms.py  typing_utils.py  utils.py
mmm/data_loading/: ClassificationDataset.py  DetectionDataset.py  DiskDataset.py  DistributedPath.py  ImageCaptionDataset.py  ImageGenerationDataset.py  ImageTranslationDataset.py  MTLDataset.py  MultiLabelSemSegDataset.py  MultilabelClassificationDataset.py  MultipleInstanceDataset.py  RegressionDataset.py  SemSegDataset.py  TrainValCohort.py  s3.py  ssl.py  utils.py
mmm/data_loading/geojson/: AnnoFilterConfig.py  GeoAnno.py  GeojsonObjWindows.py  GeojsonRegionWindows.py  NoUsefulWindowException.py  WSIGeojsonDataset.py  __init__.py  utils.py
mmm/data_loading/medical/: __init__.py  wsi_service.py
mmm/data_loading/synthetic/: artifact.py  mockup.py  shape_dataset.py
mmm/interactive/: __init__.py  blocks.py  configs.py  data.py  pipes.py  tasks.py  training.py  utils.py
mmm/labelstudio_ext/: DLModel.py  LGBModel.py  LSDataset.py  LSModel.py  LabelstudioCredentials.py  NativeBlocks.py  projects.py  utils.py
mmm/logging/: st_ext.py  type_ext.py  wandb_ext.py
mmm/mtl_modules/: MTLModule.py
mmm/mtl_modules/shared_blocks/: FCOSDecoder.py  Grouper.py  MTLDecoder.py  PyramidDecoder.py  PyramidEncoder.py  SharedBlock.py  SharedModules.py  Squeezer.py  TaskSpecificLayer.py  TextEmbedder.py
mmm/mtl_modules/tasks/: ClassificationTask.py  ImageGenerationTask.py  MTLTask.py  MultilabelClassificationTask.py  RegressionTask.py  SemSegTask.py  TaskModule.py  mmDetectionTask.py
mmm/neural/: TorchModule.py  __init__.py  activations.py  layers.py  losses.py  model_protocols.py  module_conversions.py  pooling.py
mmm/neural/modules/: TimmEncoder.py  TorchVisionCNN.py  convnext.py  simple_cnn.py  smp_modules.py  swinformer.py
mmm/optimization/: MTLOptimizer.py
mmm/resources/: annotatedimage.jinja2  jsonform.jinja2  lgbmodel_expertinstruction.jinja2  lgbmodel_status.jinja2
mmm/trainer/: CallbackType.py  Loop.py  MTLTrainer.py  TaskPurpose.py
scripts/: geojson_import.ipynb  rebuild-docs.sh
tests/: conftest.py  test_activations.py  test_api.py  test_app.py  test_bucketizing.py  test_convergence.py  test_event_selectors.py  test_export.py  test_grouper.py  test_loop.py  test_mockup.py  test_mtl_tasks.py  test_mtl_training.py  test_mtloptimizer.py  test_shared_blocks.py  test_task_sampling.py  test_torch_ext.py  test_transforms.py  test_utils.py
tests/data_loading/: test_mtl_datasets.py  test_utils.py
tests/geojson/: test_geojson.py
